packages/build/tests/error/fixtures/build_command/file.js
'use strict'

const { exit } = require('process')

exit(1)
